source/styles/components/_filters.scss
$filter-padding-vertical: ($line-height-computed / 2) !default;
$filter-padding-horizontal: $padding-base-horizontal !default;
$filter-max-depth: 2 !default;
$filter-control-size: 20px !default;

.filter-heading {
  margin: 0;
  padding: 0;
}

.filter-summary {
  font-size: inherit;
  margin-left: ($filter-padding-horizontal / 2);

  &:empty {
    display: none;
  }
}

.filter-item {
  border-color: $gray-lighter;
  border-style: solid;
  border-width: 1px 0;
  cursor: pointer;
  display: block;
  font-weight: normal;
  line-height: $line-height-base;
  margin: -1px 0;
  overflow: hidden;
  padding:
    $filter-padding-vertical
    ($filter-padding-horizontal * 1.5 + $filter-control-size)
    $filter-padding-vertical
    $filter-padding-horizontal;
  position: relative;

  &,
  &:hover,
  &:focus {
    color: inherit;
    text-decoration: none;
  }

  &:hover,
  &:focus {
    background-color: $tan-light;
    border-color: $tan;
    z-index: 2;
  }

  $nested-selector: ".filter .filter";
  @for $i from 2 through $filter-max-depth {
    $nested-selector: $nested-selector " .filter";
    #{$nested-selector} & {
      padding-left: ($filter-padding-horizontal * $i);
    }
  }
}

.filter-primary {
  background-color: lighten($gray-lighter, 10%);
  background-image: linear-gradient(
    to bottom,
    lighten($gray-lighter, 15%),
    lighten($gray-lighter, 10%)
  );
  font-weight: bold;

  &:hover,
  &:focus {
    background-image: linear-gradient(to bottom, #fff, $tan-light);
  }
}

%filter-absolute-control {
  margin-top: ($filter-control-size / -2);
  right: $filter-padding-horizontal;
  position: absolute;
  top: 50%;
}

.filter-checkbox,
.filter-radio {
  @extend %filter-absolute-control;

  input {
    @include visuallyhidden();
  }
}

.filter-checkbox-value,
.filter-radio-value {
  background-color: #fff;
  background-position: center;
  background-repeat: no-repeat;
  border: 1px solid $gray-light;
  box-shadow: inset 0 1px 1px rgba(0,0,0,0.15);
  display: inline-block;
  height: $filter-control-size;
  position: relative;
  width: $filter-control-size;

  input:focus + & {
    border-color: $teal;
    box-shadow:
      inset 0 1px 1px rgba(0,0,0,0.15),
      0 0 0 3px lighten($teal, 25%);
  }

  input:checked + & {
    background-color: lighten($teal, 5%);
    border-color: darken($teal, 10%);
  }
}

.filter-checkbox-value {
  border-radius: $border-radius-small;

  input:checked + & {
    background-image: url(/images/filter-check.svg);
  }
}

.filter-radio-value {
  border-radius: 50%;

  input:checked + &:before {
    background-color: #fff;
    border-radius: 50%;
    box-shadow: 0 0 0 1px rgba(0,0,0,.2);
    content: '';
    height: 8px;
    left: 50%;
    margin: -4px 0 0 -4px;
    position: absolute;
    top: 50%;
    width: 8px;
  }
}

.filter-parent {
  &:after {
    @extend %filter-absolute-control;
    content: '\2013';
    height: $filter-control-size;
    font-weight: bold;
    line-height: $filter-control-size;
    text-align: center;
    width: $filter-control-size;
  }

  &.collapsed:after {
    content: '+';
  }
}

